# vignemale

./: .dockerignore  .gitignore  Cargo.toml  README.md  index.html  json
.github/workflows/: ci.yml  release-pypi.yml  runtime-image.yml
benchmark/: README.md  _parse.py  app_fastapi.py  app_vignemale.py  bench.sh
cli/: pyproject.toml
cli/vignemale_cli/: build.py  cli.py  collect.py  devinfra.py  gateway.py
cli/vignemale_cli/parser/meta/v1/: meta_pb2.py
cli/vignemale_cli/parser/schema/v1/: schema_pb2.py
deploy/: pyproject.toml
deploy/tests/: test_apply.py  test_engine.py
deploy/vignemale_deploy/: __init__.py  apply.py  engine.py  model.py  render.py  scaleway.py
docker/: runtime.Dockerfile
docs/: architecture.md  notes-encore-rust-runtime.md  phase4-deploy.md  vignemale-cloud.md
examples/: agent.py  assistant.py  boutique.py  secure.py  todo.py  typed.py
examples/blog/: app.py
examples/blog/migrations/: 001_create_posts.sql  002_add_published.sql
examples/copilot/: README.md
examples/copilot/chat/: __init__.py  assistant.py  conversations.py
examples/copilot/users/: __init__.py  accounts.py
examples/copilote/: README.md
examples/copilote/chat/: __init__.py  assistant.py  conversations.py
examples/copilote/users/: __init__.py  accounts.py
examples/corpus/: README.md  embedding.py
examples/corpus/kb/: __init__.py  bases.py  documents.py
examples/corpus/rag/: __init__.py  conversations.py  search.py
examples/corpus/users/: __init__.py  accounts.py  groups.py
examples/corpus/vignemale_clients/: __init__.py  kb.py  rag.py  users.py
examples/fullstack/: app.py
examples/fullstack/front/: app.js  index.html  style.css
examples/shop/: catalog.py  orders.py
examples/shop/catalog/: __init__.py  items.py
examples/shop/orders/: __init__.py  create.py
examples/shop/vignemale_clients/: __init__.py  catalog.py  orders.py
proto/: ATTRIBUTION.md
proto/vignemale/parser/meta/v1/: meta.proto
proto/vignemale/parser/schema/v1/: schema.proto
proto/vignemale/runtime/v1/: infra.proto  runtime.proto  secretdata.proto
runtimes/core/: Cargo.toml  build.rs
runtimes/core/src/: config.rs  lib.rs  names.rs  objects.rs  observability.rs  proccfg.rs  sqldb.rs
runtimes/core/src/api/: endpoint.rs  error.rs  manager.rs  mod.rs  server.rs  svcauth.rs
runtimes/core/src/api/gateway/: mod.rs  proxy.rs  routing.rs
runtimes/core/src/runtime_config/: mod.rs
runtimes/core/src/secrets/: mod.rs
runtimes/core/src/sqldb/: client.rs  manager.rs  mod.rs  orm.rs  transaction.rs  val.rs
runtimes/python/: Cargo.toml  README.md  pyproject.toml
runtimes/python/python/vignemale/: __init__.py  __main__.py  _genutil.py  api.py  bucket.py  call.py  cli.py  clients.py  collect.py  datamodel.py  devinfra.py  gdpr.py  gen.py  log.py  rgpd.py  secret.py  service.py  sqldb.py
runtimes/python/python/vignemale/parser/meta/v1/: meta_pb2.py
runtimes/python/python/vignemale_cli/: __init__.py  auth.py  build.py  cli.py  collect.py  deploy.py  devinfra.py  gateway.py  gen.py  init.py  link.py
runtimes/python/src/: lib.rs
runtimes/python/tests/: app_auth.py  app_auth_broken.py  app_hello.py  app_sql_broken.py  app_sql_casse.py  conftest.py  svc_catalog.py  svc_orders.py  test_api.py  test_auth.py  test_bucket_secret.py  test_call.py  test_cli.py  test_collect.py  test_copilot.py  test_copilote.py  test_core.py  test_corpus.py  test_devinfra.py  test_errors.py  test_gateway.py  test_gdpr.py  test_gen.py  test_model.py  test_observability.py  test_orm_tiers.py  test_prod_ready.py  test_rgpd.py  test_serve_filter.py  test_shutdown.py  test_sqlcheck.py  test_sqldb.py  test_static.py  test_workers.py
runtimes/python/tests/golden/: shop_meta.json
scripts/: build-from-scratch.sh
