# Vignemale — Infrastructure from Code pour agents IA (structure miroir d'Encore).
# Le cœur = runtimes/core (Rust), à PORTER depuis encore/runtimes/core.
[workspace]
resolver = "2"
members = ["runtimes/core", "runtimes/python"]
# `cargo build` (sans args) ne build que le core ; le binding Python se build via maturin.
default-members = ["runtimes/core"]

# Profil release optimisé pour la PROD (l'image Docker via `maturin build --release`).
# strip : retire les symboles de debug du .so (≈31 Mo → ≈10 Mo) ; lto + 1 unité de
# codegen : binaire plus petit ET plus rapide (élimine le code mort entre crates).
# On NE touche PAS opt-level (reste 3) ni panic (reste unwind, requis par PyO3 pour
# convertir un panic Rust en exception Python). `maturin develop` (dev) reste en
# debug, donc zéro impact sur l'itération locale.
[profile.release]
strip = true
lto = "fat"
codegen-units = 1
