# Vignemale — Infrastructure from Code for AI agents (structure mirroring Encore).
# The core = runtimes/core (Rust), to be PORTED from encore/runtimes/core.
[workspace]
resolver = "2"
members = ["runtimes/core", "runtimes/python"]
# `cargo build` (no args) only builds the core; the Python binding is built via maturin.
default-members = ["runtimes/core"]

# Release profile optimized for PROD (the Docker image via `maturin build --release`).
# strip: removes the debug symbols from the .so (~31 MB -> ~10 MB); lto + 1 codegen
# unit: smaller AND faster binary (eliminates dead code across crates).
# We do NOT touch opt-level (stays 3) nor panic (stays unwind, required by PyO3 to
# convert a Rust panic into a Python exception). `maturin develop` (dev) stays in
# debug, so zero impact on local iteration.
[profile.release]
strip = true
lto = "fat"
codegen-units = 1
