[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vignemale-deploy"
version = "0.1.0"
description = "Moteur d'orchestration Vignemale — provisionne et déploie sur Scaleway. Réutilisable par le CLI (--local) et par le control plane Vignemale Cloud."
requires-python = ">=3.9"
# Le moteur de PLAN (dry-run) ne dépend de rien : il transforme le meta en plan.
# Le SDK Scaleway n'est requis que pour l'APPLY réel (extra ci-dessous).
dependencies = []

[project.optional-dependencies]
scaleway = ["scaleway>=2"]

[tool.hatch.build.targets.wheel]
packages = ["vignemale_deploy"]
