[package]
name = "vignemale-runtime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Types proto (binaire), comme Encore. Versions alignées sur Encore.
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"
base64 = "0.21"
flate2 = "1.0"
gjson = "0.8.1"
# Provider Object Storage (S3-compatible → Scaleway / MinIO / AWS). Versions Encore.
aws-config = "1.1.10"
aws-sdk-s3 = "1.58"
aws-credential-types = "1.2"
tokio = { version = "1", features = ["sync", "net", "rt", "macros", "time"] }
# Serveur HTTP — même stack qu'Encore (axum 0.7 + hyper 1, en transitif).
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
form_urlencoded = "1"
socket2 = "0.5"   # SO_REUSEPORT pour le mode multi-process
tokio-stream = "0.1"
# gateway — forward HTTP vers les services backend (reqwest rustls, pas d'openssl)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
# sqldb — Postgres (pool + requêtes + transactions + TLS), comme Encore.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.14"
# TLS Postgres en rustls (pur Rust, provider ring) — PAS d'OpenSSL système, donc
# wheels portables Linux/macOS/Windows. Roots Mozilla via webpki-roots.
tokio-postgres-rustls = "0.12"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
# Génération SQL de l'ORM (le builder sous SeaORM) — dynamique à l'exécution,
# c'est ce qui permet de piloter l'ORM depuis les SDKs (Python, JS demain).
sea-query = { version = "0.32", features = ["with-json"] }
bytes = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
# Observabilité — logs structurés JSON + spans (fondation OTel à venir).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# svcauth — signature HMAC des appels service-à-service (façon EncoreAuth).
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
prost-build = "0.12"
# protoc vendoré (binaire prébuilt pour l'arch HÔTE) — build.rs pose PROTOC
# lui-même. Plus aucune install protoc en CI : marche sur Linux/macOS/Windows
# et en cross-compilation (build.rs tourne sur l'hôte, ex. x86_64 pour aarch64).
protoc-bin-vendored = "3"
