[package]
name = "vignemale-python-runtime"
version = "0.1.4"
edition = "2021"

# PyO3 binding (mirror of Encore's runtimes/js, in NAPI). Produces the Python
# extension `vignemale._core`.
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39", "extension-module"] }
vignemale-runtime-core = { path = "../core" }
prost = "0.12"
base64 = "0.21"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
