[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vignemale"
version = "0.1.3"
description = "Vignemale — déploie tes agents IA en production sur Scaleway, depuis Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MPL-2.0" }
authors = [{ name = "Jacques Dumora", email = "jdumora-tw3@omneseducation.com" }]
keywords = ["infrastructure-from-code", "ai-agents", "scaleway", "serverless", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2",      # validation des @api typés
    # Le CLI (run/check/deploy/gen/link) vit dans le même wheel que le runtime :
    # ses deps sont donc core, sinon `pip install vignemale` casse dès `vignemale run`.
    "griffe>=1.0",      # collecte statique du graphe (@api / Service)
    "protobuf>=5",      # (dé)sérialisation du meta.proto
]

[project.urls]
Homepage = "https://github.com/vignemale-org/vignemale"
Repository = "https://github.com/vignemale-org/vignemale"
Issues = "https://github.com/vignemale-org/vignemale/issues"

[project.optional-dependencies]
# `cli` conservé (vide) pour compat : `pip install vignemale[cli]` reste valide,
# griffe/protobuf sont désormais des deps core.
cli = []
dev = ["pytest>=8", "pydantic-ai-slim[anthropic]>=1.0"]

# La commande `vignemale`.
[project.scripts]
vignemale = "vignemale_cli.cli:main"

[tool.maturin]
# Projet mixte : code Python sous python/, extension Rust = vignemale._core
python-source = "python"
# inclut le SDK (vignemale) ET l'outil CLI (vignemale_cli) dans le même wheel.
python-packages = ["vignemale", "vignemale_cli"]
module-name = "vignemale._core"
features = ["pyo3/extension-module"]
