[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vignemale"
version = "0.1.3"
description = "Vignemale — deploy your AI agents to production on Scaleway, from Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MPL-2.0" }
authors = [{ name = "Jacques Dumora", email = "jdumora-tw3@omneseducation.com" }]
keywords = ["infrastructure-from-code", "ai-agents", "scaleway", "serverless", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2",      # validation of the typed @api
    # The CLI (run/check/deploy/gen/link) lives in the same wheel as the runtime:
    # its deps are therefore core, otherwise `pip install vignemale` breaks at `vignemale run`.
    "griffe>=1.0",      # static collection of the graph (@api / Service)
    "protobuf>=5",      # (de)serialization of the meta.proto
]

[project.urls]
Homepage = "https://github.com/vignemale-org/vignemale"
Repository = "https://github.com/vignemale-org/vignemale"
Issues = "https://github.com/vignemale-org/vignemale/issues"

[project.optional-dependencies]
# `cli` kept (empty) for compat: `pip install vignemale[cli]` stays valid,
# griffe/protobuf are now core deps.
cli = []
dev = ["pytest>=8", "pydantic-ai-slim[anthropic]>=1.0"]

# The `vignemale` command.
[project.scripts]
vignemale = "vignemale_cli.cli:main"

[tool.maturin]
# Mixed project: Python code under python/, Rust extension = vignemale._core
python-source = "python"
# includes the SDK (vignemale) AND the CLI tool (vignemale_cli) in the same wheel.
python-packages = ["vignemale", "vignemale_cli"]
module-name = "vignemale._core"
features = ["pyo3/extension-module"]
